New docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,13 @@ services:
          - action: rebuild
            path: package.json
     command: ["yarn", "dev"]
+  backend:
+    build:
+      context: ./backend
+    restart: unless-stopped
+    ports:
+      - "5000:5000"
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_RUN_HOST=0.0.0.0  # Ensure FLASK_RUN_HOST is set if using 'flask run' command
+      - FLASK_RUN_PORT=5000
